Configures some stuff to support high dpi. Gl3w is added but not needed for this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 set(GLFW_SOURCE_DIR "external/glfw")
 set(GLM_SOURCE_DIR "external/glm")
-set(GLEW_SOURCE_DIR "external/glew")
+set(GL3W_SOURCE_DIR "external/gl3w")
 
 # Building only the GLFW lib
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "")
@@ -11,26 +11,17 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "")
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
 set(GLFW_INSTALL OFF CACHE BOOL "")
 
-add_subdirectory(${GLFW_SOURCE_DIR} ${GLEW_SOURCE_DIR})
+add_subdirectory(${GLFW_SOURCE_DIR} ${GL3W_SOURCE_DIR})
 
 include_directories(${GLFW_SOURCE_DIR}/include
                     ${GLFW_SOURCE_DIR}/deps
                     ${GLM_SOURCE_DIR}
-                    ${GLEW_SOURCE_DIR}/include)
+                    ${GL3W_SOURCE_DIR}/include)
 
-add_library(glew STATIC
-  ${GLEW_SOURCE_DIR}/src/glew.c
-  ${GLEW_SOURCE_DIR}/include
+add_library(gl3w STATIC
+    ${GL3W_SOURCE_DIR}/src/gl3w.c
+    ${GL3W_SOURCE_DIR}/include
 )
-
-target_link_libraries(glew ${GLFW_LIBRARIES})
-
-add_definitions(
-  -DGLEW_STATIC
-)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-
 
 if (APPLE)
     set(APP_NAME "GLParticles")
@@ -44,7 +35,7 @@ if (APPLE)
         add_executable(${APP_NAME} MACOSX_BUNDLE main.cpp)
     endif ()
 
-    set_target_properties(${APP_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/app.plist.in)
+    set_target_properties(${APP_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/info.plist)
 
     set_target_properties(${APP_NAME} PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME ${APP_NAME})
     set_target_properties(${APP_NAME} PROPERTIES MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0")
@@ -55,6 +46,4 @@ else()
     add_executable(${APP_NAME} main.cpp)
 endif()
 
-target_link_libraries(${APP_NAME} glfw ${GLFW_LIBRARIES} glew)
-
-
+target_link_libraries(${APP_NAME} glfw ${GLFW_LIBRARIES} gl3w)
